Fixed the mastery button alignment issue.

--- a/app/styles/components/new-cards/_gru-class-activity-card.scss
+++ b/app/styles/components/new-cards/_gru-class-activity-card.scss
@@ -181,7 +181,6 @@
           border: none;
           display: block;
           height: 18px;
-          width: 100%;
           i {
             visibility: hidden;
           }
